<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zou="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_ddd">

    <LinearLayout style="@style/wrap_layout" >

        <LinearLayout style="@style/setting_item_layout_margin_bottom">
            <EditText
                android:id="@+id/et_user_phone"
                style="@style/login_edit_text_view_style"
                android:inputType="phone|number"
                android:digits="@string/edit_text_allow_character_numeric"
                android:hint="@string/save_info_new_phone" />
        </LinearLayout>

        <RelativeLayout style="@style/setting_item_layout">
            <EditText
                android:id="@+id/et_sms_code"
                style="@style/login_edit_text_view_style"
                android:digits="@string/edit_text_allow_character_numeric"
                android:inputType="number"
                android:hint="@string/save_info_sms_code" />
            <Button
                android:id="@+id/btn_modify_phone_sms_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/btnStyle"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingLeft="@dimen/padding_5dp"
                android:paddingRight="@dimen/padding_5dp"
                android:background="@drawable/shade_sms_code_green_bg_border_radius"
                android:textSize="@dimen/text_size_14sp"
                android:text="获取验证码"/>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_modify_phone_save_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/btnStyle"
        android:layout_marginTop="@dimen/layout_margin_48dp"
        android:layout_marginLeft="@dimen/layout_margin_24dp"
        android:layout_marginRight="@dimen/layout_margin_24dp"
        android:background="@drawable/shade_green_bg_border_radius"
        android:text="@string/btn_save_info"
        android:textSize="@dimen/text_size_18sp"/>
</LinearLayout>